force-app/main/default/objects/OI_Org_Health_Snapshot__c/fields/Compute_Run_Id__c.field-meta.xml
<CustomField>
    <fullName>Compute_Run_Id__c</fullName>
    <label>Compute Run Id</label>
    <type>Text</type>
    <length>36</length>
    <required>true</required>
    <description
  >Groups every row written by one triggered computation — mirrors OI_Scan_Run__c/OI_Scan_Task__c's run/task grouping convention.</description>
</CustomField>