force-app/main/default/objects/OI_Org_Health_Snapshot__c/fields/Computed_At__c.field-meta.xml
<CustomField>
    <fullName>Computed_At__c</fullName>
    <label>Computed At</label>
    <type>DateTime</type>
    <required>true</required>
    <description
  >When this snapshot was computed — the timestamp the UI shows as "as of."</description>
</CustomField>