force-app/main/default/objects/OI_Org_Health_Snapshot__c/fields/Coverage_Note__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Note__c</fullName>
    <label>Coverage Note</label>
    <length>4096</length>
    <type>LongTextArea</type>
    <description
  >The section's honest "what this run did/didn't cover" statement — always populated, per the product spec's "always expose analysis coverage" rule.</description>
</CustomField>