force-app/main/default/objects/OI_Org_Health_Snapshot__c/fields/Is_Truncated__c.field-meta.xml
<CustomField>
    <fullName>Is_Truncated__c</fullName>
    <label>Is Truncated</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description
  >True when this run hit its configured row ceiling and did not examine every eligible record — surfaced in the UI's coverage note rather than left implicit.</description>
</CustomField>