force-app/main/default/objects/OI_Org_Health_Snapshot__c/fields/Result_Json__c.field-meta.xml
<CustomField>
    <fullName>Result_Json__c</fullName>
    <label>Result Json</label>
    <length>131072</length>
    <type>LongTextArea</type>
    <description
  >Serialized section DTO — the full per-metric breakdown, each metric's formula text included, so the UI's formula disclosure can never drift from the number actually computed.</description>
</CustomField>