force-app/main/default/objects/OI_Org_Health_Snapshot__c/fields/Row_Count_Examined__c.field-meta.xml
<CustomField>
    <fullName>Row_Count_Examined__c</fullName>
    <label>Row Count Examined</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description
  >How many records/nodes this run actually examined — makes "bounded" provable rather than merely claimed.</description>
</CustomField>