force-app/main/default/objects/OI_Org_Health_Snapshot__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
    <description
  >0-100, nullable. Null for facts-only sections/metrics where the product spec explicitly forbids inventing a score ("no fake score") — never defaulted to 0 or 100 as a stand-in for "not applicable." (re-deployed to force re-indexing)</description>
</CustomField>