force-app/main/default/objects/OI_Org_Health_Snapshot__c/fields/Section_Key__c.field-meta.xml
<CustomField>
    <fullName>Section_Key__c</fullName>
    <label>Section Key</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
    <description
  >Matches OI_Org_Health_Section_Config__mdt.Section_Key__c, optionally with a dotted sub-metric suffix (e.g. MetadataHealth.OrphanDetection) for a Tier-3 metric that isn't the whole section.</description>
</CustomField>