force-app/main/default/objects/OI_Org_Health_Snapshot__c/fields/Triggered_By__c.field-meta.xml
<CustomField>
    <fullName>Triggered_By__c</fullName>
    <label>Triggered By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>OI Org Health Snapshots</relationshipLabel>
    <relationshipName>OI_Org_Health_Snapshots</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Mirrors OI_Scan_Run__c.Triggered_By__c — who kicked off this computation, null for a scheduled/system-triggered run.</description>
</CustomField>